syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-recipe/api/proto/v1";

import "v1/pictures.proto";

message SetRecipePicturesRequest {
  string recipeId = 1;
  string userId = 2;
  RecipePictures pictures = 3;
  string subscription = 4;
  optional int32 version = 5;
}

message SetRecipePicturesResponse {
  int32 version = 1;
  RecipePictures pictures = 2;
}
